--- a/timer/timers.css
+++ b/timer/timers.css
@@ -1,6 +1,6 @@
 body { 
     background-color: aqua; 
-    background-image: url(https://wallpapercave.com/wp/AYQhetv.jpg);
+    background-image: url(https://wallpapercave.com/wp/wp2774772.jpg);
 background-size: cover;}
     #timer { font-size: 48px; margin-bottom: 20px;margin-top: 40px;margin-left:500px; }
     #start{
